--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <meta name="keywords" content="bloom">
     <meta name="author" content="Bloom">
     
+    <link href="css/bloom.css" rel="stylesheet">
   </head>
   <body>
     <!-- Page
     ==========================================-->
-	<div style="display:flex;justify-content:center;align-items:center;width:100%;height:100%;">
-	  <div><img src="images/Bloom-logo-2016_wide-tagline-fullcolor-gray.png"></div>
+	<div class="center" style="width:100%;height:100%;">
+	  <div class="centered">
+      <img src="images/Bloom-logo-2016_wide-tagline-fullcolor-gray.png">
+    </div>
 	</div>
+
   </body>
 </html>
