--- a/index-temp.html
+++ b/index-temp.html
@@ -15,9 +15,10 @@
   <body>
     <!-- Page
     ==========================================-->
-	<div class="center" style="width:100%;height:100%;">
-	  <div class="centered">
-      <img src="images/Bloom-logo-2016_wide-tagline-fullcolor-gray.png">
+	<div class="xycenter" style="width:100%;height:100%;">
+	  <div class="xycentered">
+      <img src="images/Bloom-logo-2016_wide-tagline-fullcolor-gray.png"><br>
+      Now on A2 hosting
     </div>
 	</div>
 
